--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
