--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.15",
     "@types/uuid": "^9.0.7",
     "@uploadthing/react": "^6.1.0",
     "axios": "^1.6.4",
