--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.3.0",
     "emoji-mart": "^5.5.2",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
