--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.3",
+    "@livekit/components-react": "^1.5.3",
+    "@livekit/components-styles": "^1.0.9",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -34,6 +36,8 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.0",
     "emoji-mart": "^5.5.2",
+    "livekit-client": "^1.15.10",
+    "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
